# gsra

./: 4-12-2011 Avg Run Times.xlr  TODO  approximate_backup  documentation  documentation_copy  element_ident_accuracy.pl  minutes  prob  prob.cpp  re.csv  report.odt  result_java_test_8_copy_deletes  result_test  result_vincenti_5  script.pl  script_1.pl  script_average_SF.pl  stable_version_ppt.odp  temp.sh  test_multimedia.py  update  update_1.doc  updates.doc  updates.odt
Winter2012/: SQL_query  inspection_db_data.tgz  (+2 more)
anomalyDetection/event_detection/eblearn-1.0-r1860/core/libeblearn/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/core/libeblearn/include/: bbox.h  datasource.h  datasource.hpp  detector.h  detector.hpp  ebl_answer.h  ebl_answer.hpp  ebl_arch.h  ebl_arch.h.old  ebl_arch.hpp  ebl_arch.hpp.old  ebl_basic.h  ebl_basic.hpp  ebl_codec.h  ebl_codec.hpp  ebl_cost.h  ebl_cost.hpp  ebl_defines.h  ebl_energy.h  ebl_energy.hpp  ebl_layers.h  ebl_layers.hpp  ebl_logger.h  ebl_logger.hpp  ebl_machines.h  ebl_machines.hpp  ebl_nonlinearity.h  ebl_nonlinearity.hpp  ebl_preprocessing.h  ebl_preprocessing.hpp  ebl_states.h  ebl_states.hpp  ebl_tester.h  ebl_tester.hpp  ebl_trainer.h  ebl_trainer.hpp  ebl_transfer.h  ebl_transfer.hpp  ebl_utils.h  libeblearn.h  (+2 more)
anomalyDetection/event_detection/eblearn-1.0-r1860/core/libeblearn/src/: bbox.cpp  ebl_arch.cpp  ebl_codec.cpp  ebl_cost.cpp  ebl_logger.cpp  ebl_states.cpp  ebl_transfer.cpp  ebl_utils.cpp  net_cscscfe.cpp  sdnn_modules.cpp
anomalyDetection/event_detection/eblearn-1.0-r1860/core/libidx/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/core/libidx/include/: color_spaces.h  color_spaces.hpp  config.h  defines.h  gaussian_pyramid.h  gaussian_pyramid.hpp  geometry.h  geometry.hpp  idx.h  idx.hpp  idxIO.h  idxIO.hpp  idx_iterators.h  idx_iterators.hpp  idxops.h  idxops.hpp  idxops_ipp.hpp  image.h  image.hpp  imageIO.h  imageIO.hpp  ippops.h  ippops.hpp  libidx.h  matlab.h  matlab.hpp  numerics.h  numerics.hpp  srg.h  srg.hpp  stl.h  stl.hpp  utils.h  utils.hpp
anomalyDetection/event_detection/eblearn-1.0-r1860/core/libidx/src/: color_spaces.cpp  idx.cpp  idxIO.cpp  idxops.cpp  image.cpp  imageIO.cpp  matlab.cpp  numerics.cpp  srg.cpp  stl.cpp  utils.cpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/libeblearntools/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/libeblearntools/include/: camera.h  camera.hpp  camera_directory.h  camera_directory.hpp  camera_kinect.h  camera_kinect.hpp  camera_opencv.h  camera_shmem.h  camera_shmem.hpp  camera_v4l2.h  camera_v4l2.hpp  camera_video.h  camera_video.hpp  camera_windows.hpp  configuration.h  dataset.h  dataset.hpp  detection_thread.h  detection_thread.hpp  fprop_thread.h  fprop_thread.hpp  gdb.h  grid_dataset.h  grid_dataset.hpp  job.h  libeblearntools.h  metaparser.h  mpijob.h  netconf.h  netconf.hpp  opencv.h  pascal_dataset.h  pascal_dataset.hpp  pascalbg_dataset.h  pascalbg_dataset.hpp  pascalclear_dataset.h  pascalclear_dataset.hpp  pascalfull_dataset.h  pascalfull_dataset.hpp  patch_dataset.h  (+11 more)
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/libeblearntools/src/: configuration.cpp  dataset.cpp  dataset_generation.cpp  job.cpp  metaparser.cpp  mpijob.cpp  netconf.cpp  similar_patches.cpp  sort.cpp  thread.cpp  tools_utils.cpp  xml_utils.cpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/demos/facenet/: .cproject  .cvsignore  .project  CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/demos/facenet/data/: sample.mat  weights_9283.mat
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/demos/facenet/include/: facenet.h  facenet.hpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/demos/pascal/: CMakeLists.txt  dsprepare.sh  pascal_meta.conf
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/demos/posture/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/demos/unsup_vision/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/libspidx/: .svnignore  CMakeLists.txt  README.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/libspidx/include/: constants.h  libspidx.h  spBlas.h  spBlas.hpp  spIdx.h  spIdx.hpp  spIdxIO.h  spIdxIO.hpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/libspidx/src/: libspidx.cpp  spBlas.cpp  spIdx.cpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/mnist/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/mnist/src/: mnist_meta.conf
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/sp_Doc_classifier/: CMakeLists.txt  README.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/sp_Doc_classifier/include/: gzstream.h  preprocess.h  spDataSource.h  spDataSource.hpp  spEbm.h  spex.h  vectors.h  wrapper.h
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/old/sp_Doc_classifier/src/: gzstream.cpp  main.cpp  preprocess.cpp  spEbm.cpp  spex.cpp  vectors.cpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/tester/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/tester/include/: IdxIteratorsTest.h  IdxTest.h  ebl_basic_test.h  ebl_machines_test.h  ebl_preprocessing_test.h  image_test.h  ippops_test.h
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/tester/src/: IdxIteratorsTest.cpp  IdxTest.cpp  datasource_test.cpp  detector_test.cpp  ebl_basic_test.cpp  ebl_machines_test.cpp  ebl_preprocessing_test.cpp  idxIO_test.cpp  idxops_test.cpp  idxops_test2.cpp  image_test.cpp  ippops_test.cpp  main.cpp
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/tools/: CMakeLists.txt
anomalyDetection/event_detection/eblearn-1.0-r1860/tools/tools/src/: capture.cpp  detect.cpp  dscompile.cpp  dsdisplay.cpp  dsfprop.cpp  dsmerge.cpp  dssplit.cpp  imfprop.cpp  maketable.cpp  matshow.cpp  metaparse.cpp  metarun.cpp  mpidetect.cpp  stdetect.cpp  track.cpp  train.cpp  video_features_finder.cpp
(+20218 files in other folders)
